# openspdm-pqc-kem

./: CMakeLists.txt  readme.md
Include/IndustryStandard/: SpdmPqc.h
OsStub/PqcCryptLibOqs/: CMakeLists.txt  GNUmakefile  Makefile  PqcCryptLibOqs.c
UnitTest/TestPqcCryptLib/: CMakeLists.txt  GNUmakefile  KemVerify.c  Makefile  OsSupport.c  PqcCryptest.c  PqcCryptest.h  SigVerify.c
libspdm/: CMakeLists.txt  readme.md
libspdm/include/industry_standard/: spdm.h  spdm_pqc.h
libspdm/os_stub/cryptlib_mbedtls/: CMakeLists.txt
libspdm/os_stub/cryptlib_mbedtls/pem/: pem.c
libspdm/os_stub/cryptlib_mbedtls/pk/: pqc_hybrid.c  x509.c
libspdm/os_stub/cryptlib_openssl/: CMakeLists.txt
libspdm/os_stub/cryptlib_openssl/pem/: pem.c
libspdm/os_stub/cryptlib_openssl/pk/: pqc_hybrid.c  sm2.c  x509.c
libspdm/os_stub/openssllib/: CMakeLists.txt
libspdm/os_stub/pqc_crypt_lib_oqs/: CMakeLists.txt  pqc_crypt_lib_oqs.c
libspdm/os_stub/spdm_device_secret_lib/: cert.c  lib.c  spdm_device_secret_lib_internal.h
libspdm/os_stub/spdm_device_secret_lib_null/: lib.c
libspdm/unit_test/sample_key/: readme.txt
libspdm/unit_test/test_crypt/: CMakeLists.txt
libspdm/unit_test/test_pqc_crypt/: CMakeLists.txt  hybrid_sig_verify.c  kem_verify.c  os_support.c  perf.c  sig_verify.c  test_pqc_crypt.c  test_pqc_crypt.h
libspdm/unit_test/test_spdm_requester/: CMakeLists.txt  finish.c  key_exchange.c  psk_exchange.c
libspdm/unit_test/test_spdm_responder/: CMakeLists.txt  certificate.c  finish.c  psk_finish.c
oqs/: readme.md
oqs/include/oqs/: aes.h  common.h  kem.h  kem_hqc.h  kem_kyber.h  kem_ntruprime.h  kem_sike.h  oqs.h  oqsconfig.h  oqsconfig_linux.h  rand.h  sha2.h  sha3.h  sig_rainbow.h
spdm_dump/: CMakeLists.txt
spdm_dump/doc/: spdm_dump.md
spdm_dump/spdm_dump/: CMakeLists.txt  spdm_dump.c  spdm_dump.h
spdm_dump/spdm_dump/spdm/: spdm_dump_session.c  spdm_dump_spdm.c
spdm_emu/: CMakeLists.txt
spdm_emu/doc/: spdm_emu.md
spdm_emu/spdm_emu/spdm_emu_common/: command.c  command.h  key.c  perf.c  spdm_emu.c  spdm_emu.h  support.c
spdm_emu/spdm_emu/spdm_perf_emu/: CMakeLists.txt  spdm_perf_emu.c  spdm_requester.c  spdm_requester_authentication.c  spdm_requester_emu.c  spdm_requester_measurement.c  spdm_requester_session.c  spdm_responder.c  spdm_responder_emu.c
spdm_emu/spdm_emu/spdm_requester_emu/: CMakeLists.txt  spdm_requester.c  spdm_requester_emu.c  spdm_requester_session.c
spdm_emu/spdm_emu/spdm_responder_emu/: CMakeLists.txt  spdm_responder.c  spdm_responder_emu.c
(+689 files in other folders)
